--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "task1": "nodemon ./src/module1/task1.js",
-    "task2": "nodemon --exec babel-node ./src/module1/task2.js"
+    "task2": "nodemon --exec babel-node ./src/module1/task2.js",
+    "task3": "nodemon --exec babel-node ./src/module2/service.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +25,12 @@
     "@babel/core": "^7.20.5",
     "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
+    "eslint": "^8.32.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "express": "^4.18.2",
+    "joi": "^17.7.0"
   }
 }
