--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "task1": "nodemon ./src/module1/task1.js",
     "task2": "nodemon --exec babel-node ./src/module1/task2.js",
-    "task3": "nodemon --exec babel-node ./src/module2/service.js"
+    "task3": "nodemon --exec babel-node ./src/module2/service.js",
+    "module3": "nodemon --exec babel-node ./src/module2/app.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,10 @@
   },
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.7.0"
+    "joi": "^17.7.0",
+    "pg": "^8.9.0",
+    "sequelize": "^6.28.0"
   }
 }
