--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "pg": "^8.9.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "winston": "^3.8.2"
   }
 }
